Fixed rolladex vertical aligning and sizing

--- a/.site/styles/compiled/global.css
+++ b/.site/styles/compiled/global.css
@@ -194,24 +194,17 @@ fieldset {
   margin-top: 44px;
   width: 100%;
   overflow-x: auto;
-  overflow-y: visible;
-  height: 500px;
   text-align: center;
   font-size: 0;
-  white-space: nowrap; }
+  white-space: nowrap;
+  padding-bottom: 10px; }
   .rolladex > img {
     display: inline-block;
     margin-right: 22px;
-    max-height: 490px;
-    max-width: 100vw;
+    max-height: 70vh;
+    max-width: 90vw;
     box-shadow: 6px 6px 3px 0 #BBB;
     vertical-align: middle; }
-    .rolladex > img::before {
-      content: ' ';
-      height: 490px;
-      width: 0;
-      display: inline-block;
-      vertical-align: middle; }
     .rolladex > img:nth-child(1) {
       margin-left: 22px; }
 
