--- a/.site/styles/source/_template.scss
+++ b/.site/styles/source/_template.scss
@@ -183,27 +183,18 @@ fieldset {
 	margin-top: $content-padding * 2;
 	width: 100%;
 	overflow-x: auto;
-	overflow-y: visible;
-	height: 500px;
 	text-align: center;
 	font-size: 0;
 	white-space: nowrap;
+	padding-bottom: 10px;
 
 	> img {
 		display: inline-block;
 		margin-right: $content-padding;
-		max-height: 490px;
-		max-width: 100vw;
+		max-height: 70vh;
+		max-width: 90vw;
 		box-shadow: 6px 6px 3px 0 #BBB;
 		vertical-align: middle;
-
-		&::before {
-			content: ' ';
-			height: 490px;
-			width: 0;
-			display: inline-block;
-			vertical-align: middle;
-		}
 
 		// Fencepost margin
 		&:nth-child(1) {
